scope a selector to avoid style bleed

--- a/src/main/resources/scss/debris/_content-editing.scss
+++ b/src/main/resources/scss/debris/_content-editing.scss
@@ -371,7 +371,7 @@ input[type=number]{
 
 
 
-	form {
+	form:not(.search-component) {
 		box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.3);
 
 		// Style the place holder
